fix molecule test

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -7,7 +7,7 @@
   tasks:
     - name: Stat restic
       ansible.builtin.stat:
-        path: /usr/local/bin/restic
+        path: /usr/bin/restic
       register: restic_present
     - name: Check restic is present
       ansible.builtin.assert:
