--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Install test dependencies.
         run: |
-          pip3 install ansible molecule molecule-plugins[docker] docker jmespath
+          pip3 install ansible molecule molecule-plugins[docker] docker jmespath molecule-docker
 
       - name: Run Molecule tests.
         run: |
