fix setup of unzip package (RedHat family only)

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,8 @@
   ansible.builtin.package:
     name: ["unzip", "bzip2"]
     state: present
+  # only for redhat distribution
+  when: ansible_os_family == 'RedHat'
 
 - name: Retrieve latest release information
   ansible.builtin.uri:
