tests: add multiple distro for molecule tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,11 @@ jobs:
           - rockylinux9
           - rockylinux8
           - ubuntu2204
+          - ubuntu2004
+          - debian12
+          - debian11
+          - debian10
+          - fedora39
 
     steps:
       - name: Check out the codebase.
