--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+ansible==9.6.0
 ansible-compat==4.1.11
-ansible-core==2.15.0
-ansible-lint==24.2.1
+ansible-core==2.16.7
+ansible-lint==24.2.3
 arrow==1.2.3
 attrs==23.1.0
 binaryornot==0.4.4
-black==23.3.0
+black==24.4.2
 bracex==2.3.post1
 certifi==2023.5.7
 cffi==1.15.1
@@ -28,6 +29,7 @@ MarkupSafe==2.1.2
 mdurl==0.1.2
 molecule==6.0.3
 molecule-docker==2.1.0
+molecule-plugins==23.5.3
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.1
@@ -50,6 +52,7 @@ six==1.16.0
 subprocess-tee==0.4.1
 text-unidecode==1.3
 tomli==2.0.1
+typing_extensions==4.11.0
 urllib3==1.26.16
 wcmatch==8.4.1
 websocket-client==1.5.1
